stage, music api
